(fix) z-indexs

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,8 +27,6 @@
 	min-height:760px;
 	overflow-y: auto;
 	overflow-x: auto;
-	z-index: -100;
-	position: absolute;
 }
 
 h1, h2, h3, h4, h5, strong, b {
@@ -46,7 +44,7 @@ h1{
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: -2;
+	z-index: 2;
 	}
 
 h2{
@@ -91,7 +89,7 @@ ul.nav
 	left: 0;
 	right: 0;
 	top: 0;
-	z-index: -2;
+	z-index: 2;
 }
 
 ul.nav li.nav { display: inline; }
@@ -103,7 +101,7 @@ ul.nav li.nav { display: inline; }
 	right: 14px;
 	float: right;
 	position: fixed;
-	z-index: -1;
+	z-index: 2;
 	
 }
 
@@ -114,7 +112,7 @@ top: 4px;
 left: 4px;
 float: left;
 position: fixed;
-z-index: -1;
+z-index: 1;
 }
 
 #flashalert, #flashnotice{
